monitoring/discord-alert-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: discord-alert
  namespace: monitoring
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: discord-alert-www
  selector:
    name: discord-alert
