monitoring/grafana-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
    - name: monitoring-gateway
      kind: Gateway
      sectionName: http
      group: gateway.networking.k8s.io
  hostnames:
    - "grafana.raft.lutris.house"
  rules:
    - backendRefs:
        - name: prometheus-stack-grafana
          port: 80
          kind: Service
          group: ""
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
