monitoring/logs-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: logs-route
  namespace: monitoring
spec:
  parentRefs:
    - name: monitoring-gateway
      kind: Gateway
      sectionName: http
      group: gateway.networking.k8s.io
  hostnames:
    - logs.raft.lutris.house
  rules:
    - backendRefs:
        - name: prometheus-stack-victoria-logs-single-server
          port: 9428
          kind: Service
          group: ""
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
