monitoring/monitoring-vlogs-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monitoring-logs
  namespace: monitoring
spec:
  hostnames:
    - logs.raft.lutris.house
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: monitoring-vlogs
      sectionName: http
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: vlsingle-monitoring-victoria-metrics-k8s-stack
          port: 9428
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
