monitoring/monitoring-ui-authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: monitoring
  namespace: monitoring
spec:
  action: CUSTOM
  provider:
    name: authelia
  rules:
    - to:
        - operation:
            hosts:
              - alertmanager.raft.lutris.house
              - vmagent.raft.lutris.house
              - vmalert.raft.lutris.house
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: monitoring
